fix:  исправить замечания после ревью